3node ek config

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -5,8 +5,8 @@ clusterGroup:
   isHubCluster: true
 
   namespaces:
-    - open-cluster-management: #for ACM
-        operatorGroup: true
+          #- open-cluster-management: #for ACM
+          #        operatorGroup: true
     - openshift-nmstate: #for NMstate
         operatorGroup: true
           #    - openshift-local-storage: #for LSO
